[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
#hyper = "0.14"
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
tokio = { version = "1", features = ["full"] }
#num_cpus = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"                                        # URL encoding/decoding for query parameters
